--- a/Ganga_File_Split.ipynb
+++ b/Ganga_File_Split.ipynb
@@ -33,7 +33,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!pip install ganga PyPDF2"
+        "!pip install ganga PyPDF2 pdfminer"
       ],
       "execution_count": 0,
       "outputs": []
@@ -56,6 +56,20 @@
         "    output.addPage(inputpdf.getPage(i))\n",
         "    with open(\"page%s.pdf\" % str(i+1), \"wb\") as outputStream:\n",
         "        output.write(outputStream)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "AA_jZgwQCCGh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!pdf2txt.py page2.pdf > output.txt\n",
+        "!tr -s ' ' '\\n' < output.txt | grep the | wc -l"
       ],
       "execution_count": 0,
       "outputs": []
