--- a/Ganga_File_Split.ipynb
+++ b/Ganga_File_Split.ipynb
@@ -73,6 +73,26 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "uxTIhVOHnwPF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import os, subprocess, time\n",
+        "\n",
+        "for i in range(1,13):\n",
+        "  \n",
+        "  print(i)\n",
+        "  filename = 'page' + str(i) + '.pdf'\n",
+        "  os.system('pdf2txt.py ' + filename + ' > output.txt')\n",
+        "  print os.popen('tr -s \"[:space:]\" \"[\\n*]\" < output.txt | grep the | wc -l').read()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
