--- a/Ganga_File_Split.ipynb
+++ b/Ganga_File_Split.ipynb
@@ -62,34 +62,30 @@
     },
     {
       "metadata": {
-        "id": "AA_jZgwQCCGh",
+        "id": "yGLHyr5e3omK",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "!pdf2txt.py page2.pdf > output.txt\n",
-        "!tr -s ' ' '\\n' < output.txt | grep the | wc -l"
+        "s = ArgSplitter(args=[['page1.pdf'],['page2.pdf'],['page3.pdf'],['page4.pdf'],['page5.pdf'],['page6.pdf'],['page7.pdf'],['page8.pdf'],['page9.pdf'],['page10.pdf'],['page11.pdf'],['page12.pdf']])\n",
+        "j = Job(splitter=s)\n",
+        "j.application.exe = File('/content/execute.py')\n",
+        "j.outputfiles = [LocalFile('my_output.txt')]\n",
+        "j.submit()"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "uxTIhVOHnwPF",
+        "id": "KB_5epQc4J6E",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "import os, subprocess, time\n",
-        "\n",
-        "for i in range(1,13):\n",
-        "  \n",
-        "  print(i)\n",
-        "  filename = 'page' + str(i) + '.pdf'\n",
-        "  os.system('pdf2txt.py ' + filename + ' > output.txt')\n",
-        "  print os.popen('tr -s \"[:space:]\" \"[\\n*]\" < output.txt | grep the | wc -l').read()"
+        "!ganga"
       ],
       "execution_count": 0,
       "outputs": []
