--- a/Ganga_File_Split.ipynb
+++ b/Ganga_File_Split.ipynb
@@ -162,6 +162,8 @@
         "#### 4) Finally, submit the Job ```j```:\n",
         "\n",
         "```j.submit()```\n",
+        "\n",
+        "#### 5) Press Enter 1-2 times to check whether the Job is completed or not.\n",
         "\n"
       ]
     },
